# aiotone

./: .flake8  .gitignore  .gitmodules  README.md  aiotone.code-workspace  build.py  mypy.ini  pyproject.toml
aiotone/: __init__.py  __main__.py  aiosc.py  aiotone-fmsynth.ini  aiotone-glitch.ini  aiotone-iridium.ini  aiotone-mothergen.ini  aiotone-redblue.ini  aiotone-samplesnake.ini  aiotone-sticks.ini  als_to_cue.py  array_perf.c  array_perf.pyx  audiofile.py  beatfile.py  circuits.py  clock.py  colors.py  flake8_typing.py  fm.c  fm.pyi  fm.pyx  fmsynth.py  glitch.py  iridium.py  loudness.py  lsdev.py  martin.py  metronome.py  midi.py  midi_transformer.py  minitest.py  monome.py  mothergen.py  norns_osc.py  notes.py  profiling.py  redblue.py  samplesnake.py  sampletrim.py  (+8 more)
docs/: fmsynth-4op-algorithms.pptx  ui-mockup-1.afphoto  ui-mockup-2.afphoto  ui-mockup-3.afphoto  ~$fmsynth-4op-algorithms.pptx
tests/: test_aiotone.py
