[tool.poetry]
name = "aiotone"
version = "19.9.0"
description = "Beep beep."
authors = ["Łukasz Langa <lukasz@langa.pl>"]
include = [{ path = "aiotone/**/*.so", format = "wheel" }]

[tool.poetry.dependencies]
python = "^3.7"
python-rtmidi = "^1.3"
uvloop = "^0.14.0"
click = "^7.0"
miniaudio = "^1.37"
wxPython = "^4.1.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^3.0"
mypy = "^0.750"
flake8 = "^3.7"
flake8-bugbear = "^19.8"

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[build-system]
requires = ["poetry>=0.12", "Cython~=0.29.21"]
build-backend = "poetry.masonry.api"
