[tool.poetry]
name = "aiotone"
version = "23.0.0"
description = "Beep beep."
authors = ["Łukasz Langa <lukasz@langa.pl>"]
include = [{ path = "aiotone/**/*.so", format = "wheel" }]

[tool.poetry.dependencies]
python = ">=3.11"
python-rtmidi = ">=1.3"
uvloop = ">=0.15.2"
click = ">=8.1"
miniaudio = ">=1.55"
Cython = ">=0.29.25"
cymem = ">=2.0.6"
pyloudnorm = ">=0.1.0"
SoundFile = ">=0.10.3"
attrs = ">=21.4.0"

[tool.poetry.dev-dependencies]
black = ">=22.3"
pytest = ">=7.1"
mypy = ">=0.950"
flake8 = ">=4.0"
flake8-bugbear = ">=22.4"

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[build-system]
requires = ["poetry>=0.12", "Cython>=0.29.21"]
build-backend = "poetry.masonry.api"
