[build-system]
requires = ["setuptools>=0.67.4.0", "Cython>=0.29.33", "cymem>=2.0.6"]
build-backend = "setuptools.build_meta"

[project]
name = "aiotone"
description = "Beep beep."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
keywords = ["MIDI", "Sequencer", "FM synthesizer", "asyncio", "Monome"]
authors = [{ name = "Łukasz Langa", email = "lukasz@langa.pl" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Multimedia :: Sound/Audio :: Mixers",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Audio",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "SoundFile",
    "attrs",
    "click",
    "miniaudio",
    "pyloudnorm",
    "python-rtmidi",
    "uvloop",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/ambv/aiotone#readme"
Issues = "https://github.com/ambv/aiotone/issues"
Source = "https://github.com/ambv/aiotone"

[project.scripts]
iridium = "aiotone.iridium:main"
redblue = "aiotone.redblue:main"

[project.optional-dependencies]
dev = ["black", "mypy", "pytest", "flake8", "flake8-bugbear"]

[tool.setuptools.dynamic]
version = { attr = "aiotone.__version__" }

[tool.setuptools]
packages = ["aiotone"]
py-modules = ["build"]

[tool.coverage.run]
branch = true
parallel = true
omit = []

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
